--- a/res/layout/input.xml
+++ b/res/layout/input.xml
@@ -1,11 +1,10 @@
-<com.whymarrh.apps.morsecode.MorseCodeKeyboardView
+<com.coffeeandcookies.hodorcode.HodorCodeKeyboardView
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/keyboardView"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:layout_alignParentBottom="true"
-	android:keyTextColor="@color/white"
-	android:keyTextSize="@dimen/key_text_size"
+	
 	android:background="@drawable/keyboard_background"
 	android:keyBackground="@drawable/btn_keyboard_key"
 	/>
